[tool.poetry]
name = "us-flight-analysis"
version = "0.1.0"
description = ""
authors = ["Chi-Ju Wu <chi.ju.wu90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.2.4"
numpy = "1.20.3"
matplotlib = "3.4.2"
tk = "0.1.0"
jupyter = "1.0.0"
seaborn = "^0.11.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
